      cache folders
    - now support lexical scope blocks (helps C++ and D with
      https://github.com/D-Programming-Language/dmd/pull/2867)
  * cv2pdb:
    - improvements for DWARF conversion
  * dparser updated to cf26dbe426b10957f6364313cc7121e41083bebe with support for new 
    language features in dmd 2.067 and fixing a number of exceptions
  * some initial support for finding symbol references
  * new linker option "build and use local phobos library" to get a COFF32 version (dmd 2.067+)
    or add missing debug info (dmd 2.065+)
  * renaming project configuration did not change respective config on all platforms 
  * workaround for link response file with spaces, but disabled short names on NTFS volume
  * profiler window: non-D symbols (e.g. C++ mangled functions) are no longer displayed empty
  * new command "Compile and Disassemble" to show the disassembly of the current file in
    the code context window that is automatically synchronized with editor movements

unreleased Version 0.3.42

  * added new command "DustMite Build Failure" to reduce source of startup project
    for build error with DustMite
  * update "Build Phobos Browse Info" and "Build local version of phobos" for dmd 2.067+
  * cv2pdb: 
    - improved DWARF support:
      - last version introduced crashes with DWARF conversions
	  - now supports info in sections .debug_frame and .debug_loc for better display of locals
      - DWARF debug info now stripped from executable
    - support for mspdb140.dll from VS2015
	- now writes correct machine type to PDB for x64
  * add integration into the Visual Studio Performance Wizard
  * added project template for console application built with DMD/LDC and x86/x64
  * bugzilla 14706: release configurations now enable optimizations and inlining by default
  * mago is now the default debug engine for new projects
  * demangle D/C++ symbols in disassembly with new tool dcxxfilt that supports both gcc
    and MS C++ mangling.