@@ -19,8 +19,8 @@ Bottom=14
 
 [Field 2]
 Type=Link
-Text=Digital Mars
-State=http://www.digitalmars.com/d/download.html
+Text=D Programming Language
+State=http://dlang.org/download.html
 Left=170
 Right=210
 Top=6
@@ -44,7 +44,7 @@ Bottom=50
 
 [Field 7]
 Type=Label
-Text=This setting can be changed from within Visual Studio later on the Tools->Options->Projects->Visual D Settings page.
+Text=This setting can be changed from within Visual Studio later on the Tools->Options->Projects->Visual D Settings->DMD Directories page.
 Left=10
 Right=234
 Top=84
